minikube/vault/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-secrets
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-secrets
  template:
    metadata:
      labels:
        app: hello-secrets
      annotations:
        vault.security.banzaicloud.io/vault-addr: "http://vault:8200"
        vault.security.banzaicloud.io/vault-skip-verify: "false" 
    spec:
      serviceAccountName: vault
      containers:
      - name: alpine
        image: alpine
        command: ["sh", "-c", "echo 'started' && sleep 10000"]
